--- a/SRteacher/RP-bookList-class.html
+++ b/SRteacher/RP-bookList-class.html
@@ -313,7 +313,7 @@ function loadclassDetialTable(rowIndex) {
         className: 'col-check',
         orderable: false,
         render: function (data, type, row, meta) {
-          return `<div class="form-check form-check-inline">
+          return `<div class="form-check form-check-inline form-check-red">
 							  <input class="form-check-input m-0" type="checkbox" value="" id="" name="check">
 							</div>`;
         }
