--- a/SRteacher/RP-bookList-teaching.html
+++ b/SRteacher/RP-bookList-teaching.html
@@ -373,43 +373,43 @@
               <table class="table table-bordered table-assign-class" id="assignClassTable-4">
                 <thead>
                   <tr>
-                    <th colspan="5"><div class="SRform-check-red">
+                    <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade4">
                         <label class="form-check-label" for="grade4">4年級</label></div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class1">
                         <label class="form-check-label" for="grade4-class1">1班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class2">
                         <label class="form-check-label" for="grade4-class2">2班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class3">
                         <label class="form-check-label" for="grade4-class3">3班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class4">
                         <label class="form-check-label" for="grade4-class4">4班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class5">
                         <label class="form-check-label" for="grade4-class5">5班</label></div></td>
                   </tr>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class6">
                         <label class="form-check-label" for="grade4-class6">6班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class7">
                         <label class="form-check-label" for="grade4-class7">7班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class8">
                         <label class="form-check-label" for="grade4-class8">8班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class9">
                         <label class="form-check-label" for="grade4-class9">9班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class10">
                         <label class="form-check-label" for="grade4-class10">10班</label></div></td>
                   </tr>
@@ -418,43 +418,43 @@
               <table class="table table-bordered table-assign-class" id="assignClassTable-5">
                 <thead>
                   <tr>
-                    <th colspan="5"><div class="SRform-check-red">
+                    <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade5">
                         <label class="form-check-label" for="grade5">5年級</label></div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class1">
                         <label class="form-check-label" for="grade5-class1">1班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class2">
                         <label class="form-check-label" for="grade5-class2">2班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class3">
                         <label class="form-check-label" for="grade5-class3">3班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class4">
                         <label class="form-check-label" for="grade5-class4">4班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class5">
                         <label class="form-check-label" for="grade5-class5">5班</label></div></td>
                   </tr>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class6">
                         <label class="form-check-label" for="grade5-class6">6班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class7">
                         <label class="form-check-label" for="grade5-class7">7班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class8">
                         <label class="form-check-label" for="grade5-class8">8班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class9">
                         <label class="form-check-label" for="grade5-class9">9班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class10">
                         <label class="form-check-label" for="grade5-class10">10班</label></div></td>
                   </tr>
@@ -463,43 +463,43 @@
               <table class="table table-bordered table-assign-class" id="assignClassTable-6">
                 <thead>
                   <tr>
-                    <th colspan="5"><div class="SRform-check-red">
+                    <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade6">
                         <label class="form-check-label" for="grade6">6年級</label></div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class1">
                         <label class="form-check-label" for="grade6-class1">1班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class2">
                         <label class="form-check-label" for="grade6-class2">2班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class3">
                         <label class="form-check-label" for="grade6-class3">3班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class4">
                         <label class="form-check-label" for="grade6-class4">4班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class5">
                         <label class="form-check-label" for="grade6-class5">5班</label></div></td>
                   </tr>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class6">
                         <label class="form-check-label" for="grade6-class6">6班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class7">
                         <label class="form-check-label" for="grade6-class7">7班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class8">
                         <label class="form-check-label" for="grade6-class8">8班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class9">
                         <label class="form-check-label" for="grade6-class9">9班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class10">
                         <label class="form-check-label" for="grade6-class10">10班</label></div></td>
                   </tr>
@@ -508,43 +508,43 @@
               <table class="table table-bordered table-assign-class" id="assignClassTable-7">
                 <thead>
                   <tr>
-                    <th colspan="5"><div class="SRform-check-red">
+                    <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade7">
                         <label class="form-check-label" for="grade7">7年級</label></div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class1">
                         <label class="form-check-label" for="grade7-class1">1班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class2">
                         <label class="form-check-label" for="grade7-class2">2班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class3">
                         <label class="form-check-label" for="grade7-class3">3班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class4">
                         <label class="form-check-label" for="grade7-class4">4班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class5">
                         <label class="form-check-label" for="grade7-class5">5班</label></div></td>
                   </tr>
                   <tr>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class6">
                         <label class="form-check-label" for="grade7-class6">6班</label></div></td>
-                     <!--<td class=""><div class="SRform-check-red">
+                     <!--<td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class7">
                         <label class="form-check-label" for="grade7-class7">7班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class8">
                         <label class="form-check-label" for="grade7-class8">8班</label></div></td>
-                    <td class=""><div class="SRform-check-red">
+                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class9">
                         <label class="form-check-label" for="grade7-class9">9班</label></div></td>
-                   <td class=""><div class="SRform-check-red">
+                   <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class10">
                         <label class="form-check-label" for="grade7-class10">10班</label></div></td>-->
                   </tr>
@@ -620,9 +620,9 @@ $(document).ready(function () {
         orderable: false,
         visible: false,
         render: function (data, type, row, meta) {
-          return `<div class="SRform-check-red">
-                              <input class="form-check-input" type="checkbox" name="delete">
-                            </div>`;
+          return `<div class="form-check form-check-inline form-check-red">
+										<input class="form-check-input" type="checkbox" name="delete">
+									</div>`;
         }
       },
       { //序號
