--- a/SRteacher/DACC-session.html
+++ b/SRteacher/DACC-session.html
@@ -212,7 +212,7 @@
                         <table class="table table-bordered mb-0 table-studentSet" id="grade5-class2">
                           <thead>
                             <tr>
-                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline SRform-check-red">
+                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" id="checkAll-grade5-class2" name="checkAll">
                                 </div>
                                 <button class="btn btn-link p-0" type="button" data-bs-toggle="collapse" data-bs-target="#grade5-class2-body" aria-expanded="true" aria-controls="grade5-class2-body">2班</button>
@@ -224,7 +224,7 @@
                           </thead>
                           <tbody class="collapse show" id="grade5-class2-body">
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check" id="">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -232,7 +232,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -240,7 +240,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -254,7 +254,7 @@
                         <table class="table table-bordered mb-0 table-studentSet" id="grade5-class3">
                           <thead>
                             <tr>
-                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline SRform-check-red">
+                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" id="checkAll-grade5-class3" name="checkAll">
                                   <button class="btn btn-link p-0" type="button" data-bs-toggle="collapse" data-bs-target="#grade5-class3-body" aria-expanded="true" aria-controls="grade5-class2-body">3班</button>
                                 </div>
@@ -266,7 +266,7 @@
                           </thead>
                           <tbody class="collapse show" id="grade5-class3-body">
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check" id="">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -274,7 +274,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -282,7 +282,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -305,7 +305,7 @@
                         <table class="table table-bordered mb-0 table-studentSet" id="grade4-class1">
                           <thead>
                             <tr>
-                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline SRform-check-red">
+                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" id="checkAll-grade4-class1" name="checkAll">
                                 </div>
                                 <button class="btn btn-link p-0" type="button" data-bs-toggle="collapse" data-bs-target="#grade4-class1-body" aria-expanded="true" aria-controls="grade4-class1-body">1班</button>
@@ -317,7 +317,7 @@
                           </thead>
                           <tbody class="collapse show" id="grade4-class1-body">
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check" id="">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -325,7 +325,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -333,7 +333,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -347,7 +347,7 @@
                         <table class="table table-bordered mb-0 table-studentSet" id="grade4-class2">
                           <thead>
                             <tr>
-                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline SRform-check-red">
+                              <th scope="col" class="col-classCheck"> <div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" id="checkAll-grade4-class2" name="checkAll">
                                   <button class="btn btn-link p-0" type="button" data-bs-toggle="collapse" data-bs-target="#grade4-class2-body" aria-expanded="true" aria-controls="grade4-class2-body">2班</button>
                                 </div>
@@ -359,7 +359,7 @@
                           </thead>
                           <tbody class="collapse show" id="grade4-class2-body">
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check" id="">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -367,7 +367,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -375,7 +375,7 @@
                               <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                             </tr>
                             <tr>
-                              <td class="col-classCheck"><div class="SRform-check-red">
+                              <td class="col-classCheck"><div class="form-check form-check-inline form-check-red">
                                   <input class="form-check-input" type="checkbox" name="check">
                                 </div></td>
                               <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
@@ -852,7 +852,7 @@ $(document).ready(function () {
 						studentRows += `
 							<tr>
 								<td class="col-classCheck">
-									<div class="SRform-check-red">
+									<div class="form-check form-check-inline form-check-red">
 										<input class="form-check-input" type="checkbox" name="check">
 									</div>
 								</td>
@@ -875,7 +875,7 @@ $(document).ready(function () {
 								<thead>
 									<tr>
 										<th scope="col" class="col-classCheck">
-											<div class="form-check form-check-inline SRform-check-red">
+											<div class="form-check form-check-inline form-check-red">
 												<input class="form-check-input" type="checkbox" id="${checkAllId}" name="checkAll">
 											</div>
 											<button class="btn btn-link p-0"
