--- a/SRteacher/RP-skill-performance.html
+++ b/SRteacher/RP-skill-performance.html
@@ -100,7 +100,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td class="col-check"><div class="form-check form-check-inline SRform-check-red">
+                  <td class="col-check"><div class="form-check form-check-inline form-check-red">
                       <input class="form-check-input m-0" type="checkbox" value="" id="" name="checkAll">
                     </div></td>
                   <td class="col-year">2022</td>
@@ -356,7 +356,7 @@ $(document).ready(function () {
         className: 'col-check',
         orderable: false,
         render: function (data, type, row, meta) {
-          return `<div class="form-check form-check-inline SRform-check-red">
+          return `<div class="form-check form-check-inline form-check-red">
 					<input class="form-check-input m-0" type="checkbox" value="" id="" name="checkAll">
 				</div>`;
         }
@@ -517,7 +517,7 @@ function format(rowData, tableIndex) {
 
     html += `
             <td>
-                <div class="form-check form-check-inline SRform-check-red">
+                <div class="form-check form-check-inline form-check-red">
                     <input class="form-check-input"
                            type="checkbox"
                            id="${inputId}"
